--- a/package.json
+++ b/package.json
@@ -3,19 +3,19 @@
   "version": "1.0.0",
   "description": "",
   "dependencies": {
-    "dotenv": "^10.0.0",
-    "eslint-scope": "^7.1.0",
-    "jest": "^23.3",
-    "jest-cucumber": "^1.0.11",
-    "jest-html": "^1.5.0",
-    "jest-html-reporter": "^2.4.3",
-    "jest-junit": "^6.0.1",
-    "mongodb": "^4.2.2",
-    "promisify": "^0.0.3",
     "chainpoint-binary": "^4.0.1",
     "chainpoint-client": "^0.2.1",
     "chainpoint-parse": "^3.1.1",
-    "chainpoint-validate": "*"
+    "chainpoint-validate": "*",
+    "crypto-js": "^4.1.1",
+    "dotenv": "^10.0.0",
+    "eslint-scope": "^7.1.0",
+    "jest-cucumber": "^1.0.11",
+    "jest-html": "^1.5.0",
+    "jest-html-reporter": "^3.4.2",
+    "jest-junit": "^13.0.0",
+    "mongodb": "^4.2.2",
+    "promisify": "^0.0.3"
   },
   "scripts": {
     "test": "MODE=local jest  --runInBand --forceExit --detectOpenHandles",
@@ -46,7 +46,7 @@
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "eslint-plugin-standard": "^2.1.1",
-    "jest": "^23.3",
+    "jest": "^23.6.0",
     "skip-if": "^1.1.1"
   }
 }
